--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -117,7 +117,6 @@ pre[class*="language-"] {
   -o-tab-size: 4;
   tab-size: 4;
   -webkit-hyphens: none;
-  -ms-hyphens: none;
   hyphens: none;
 }
 
@@ -218,7 +217,7 @@ pre[class*="language-"] {
   cursor: help;
 }
 
-/* ! tailwindcss v3.1.3 | MIT License | https://tailwindcss.com */
+/* ! tailwindcss v3.1.7 | MIT License | https://tailwindcss.com */
 
 /*
 1. Prevent padding and border from affecting element width. (https://github.com/mozdevs/cssremedy/issues/4)
@@ -573,13 +572,6 @@ input::-moz-placeholder, textarea::-moz-placeholder {
   /* 2 */
 }
 
-input:-ms-input-placeholder, textarea:-ms-input-placeholder {
-  opacity: 1;
-  /* 1 */
-  color: #9ca3af;
-  /* 2 */
-}
-
 input::placeholder,
 textarea::placeholder {
   opacity: 1;
@@ -774,6 +766,10 @@ video {
   --tw-backdrop-opacity:  ;
   --tw-backdrop-saturate:  ;
   --tw-backdrop-sepia:  ;
+}
+
+.static {
+  position: static;
 }
 
 .relative {
