--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -49,3 +49,31 @@ h5 {
     }
   }
 }
+
+.nav input {
+  &:checked {
+    & ~ .nav-menu-wrapper .nav-menu-items {
+      @apply opacity-100 visible;
+
+      ul {
+        @apply translate-x-0;
+      }
+    }
+
+    & ~ .nav-menu-wrapper .nav-menu-label .menu-bar {
+      @apply bg-white;
+
+      &-1 {
+        transform: translate3d(0, 1rem, 0) rotate(-45deg);
+      }
+
+      &-2 {
+        opacity: 0;
+      }
+
+      &-3 {
+        transform: translate3d(0, -1rem, 0) rotate(45deg);
+      }
+    }
+  }
+}
