--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -53,7 +53,7 @@ h5 {
 .nav input {
   &:checked {
     & ~ .nav-menu-wrapper .nav-menu-items {
-      @apply opacity-100 visible;
+      @apply visible opacity-100;
 
       ul {
         @apply translate-x-0;
