--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -1589,6 +1589,10 @@ video {
   height: 100vh;
 }
 
+.h-10 {
+  height: 2.5rem;
+}
+
 .w-4 {
   width: 1rem;
 }
@@ -1615,6 +1619,10 @@ video {
 
 .w-20 {
   width: 5rem;
+}
+
+.w-10 {
+  width: 2.5rem;
 }
 
 .max-w-prose {
@@ -1733,6 +1741,12 @@ video {
   --tw-space-y-reverse: 0;
   margin-top: calc(2.5rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(2.5rem * var(--tw-space-y-reverse));
+}
+
+.space-x-1 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(0.25rem * var(--tw-space-x-reverse));
+  margin-left: calc(0.25rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
 .rounded-md {
@@ -2053,6 +2067,22 @@ h5 {
 
 .remark-highlight * {
   font-family: Consolas,Monaco,Andale Mono,Ubuntu Mono,monospace;
+}
+
+svg {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.icon path {
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+  fill: #1f2937;
+}
+
+.icon:hover path {
+  fill: #a855f7
 }
 
 .hover\:border-gray-200:hover {
