--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -118,7 +118,7 @@ form {
 }
 
 .divider {
-  @apply border-0 bg-gray-300 w-full max-w-xl mx-auto;
+  @apply mx-auto w-full max-w-xl border-0 bg-gray-300;
   height: 1px;
 
   &.divider--wide {
